          : Fix XON/OFF thresholds to be based off the correct buffer size
         
     2v22 : Graphics: Ensure floodFill sets modified area correctly
            nRF52: Lower expected BLE XTAL accuracy to 50ppm (can improve BLE stability on some Bangle.js 2)
            Emulator: force stack alignment of 'data' variable when accessing ArrayBuffers (fix #2463)
            Swapped GCC version from 8.2.1 to 13.2.1 (fix #2455)
            nRF52: Write flash in 2k blocks (not 4k) as SD 6.1.1 can crash (probably good for earlier SD too)
            g.wrapString fix issues wrapping long words in UTF8 strings over multiple lines
            Bangle.js2: Fix parsing of UTF8 strings containing char codes 0xF5..0xFF (which are not valid UTF8)
            nRF52: Added window/interval arguments to NRF.setScan (default was 100ms)
            nRF52840: setScan({... phy:"both"}) now means coded+1mbps (ref #2465)
            Added 'globalThis' var as it's the ECMAScript version of Node.js's 'global'
            Bangle.js: Bangle.setUI's back widget now uses stopEventPropagation to stop other touch handlers getting called
            Improvements to Stepper module (default to absolute movement)
            Throw error if there's an attempt to use Tagged Templates (fix #2475)
            For built-in symbols, pack string offset inside function pointer, saving 2 bytes/symbol if ESPR_PACKED_SYMPTR set (fix #2405)
            Graphics: font metrics for PBF now account for scale, setFontPBF takes a scale argument, 'PBF' no longer appears in getFonts
            Ensure require("Storage").writeJSON("test.json", new Date()) writes `Date.toISOString()` as in JSON.stringify and 2v19+earlier
            E.toJSON now uses `.toJSON` function if available on object
            Puck.js/Jolt.js: ensure self-test keeps re-running at boot unless it has passed